vendor/cargo/parameterized-macro-1.1.0/tests/fail/square_brackets_old_error_message.stderr
error: expected curly braces
 --> $DIR/square_brackets_old_error_message.rs:3:21
  |
3 | #[parameterized(v = [1, 2, 3])]
  |                     ^^^^^^^^^
